--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "engines":{
+    "node":  "23.7.0"
+  },
   "name": "major-project",
   "version": "1.0.0",
   "main": "index.js",
@@ -13,6 +16,7 @@
     "@mapbox/mapbox-sdk": "^0.16.1",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cookieparser": "^0.1.0",
     "dotenv": "^17.2.0",
     "ejs": "^3.1.10",
